--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bn.js": "^4.11.8",
     "elliptic": "^6.4.1",
     "keythereum": "^1.0.4",
-    "secp256k1": "^3.5.2"
+    "secp256k1": "^3.5.2",
+    "tape": "^4.9.1"
   }
 }
