--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bn.js": "^4.11.8",
+    "chloride": "^2.2.10",
     "elliptic": "^6.4.1",
     "keythereum": "^1.0.4",
     "secp256k1": "^3.5.2",
