--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "elliptic": "^6.4.1",
     "keythereum": "^1.0.4",
     "secp256k1": "^3.5.2",
+    "sodium-native": "^2.2.4",
     "tape": "^4.9.1"
   },
   "devDependencies": {
