--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "keythereum": "^1.0.4",
     "secp256k1": "^3.5.2",
     "sodium-native": "^2.2.4",
+    "ssb-db": "^19.0.3",
     "tape": "^4.9.1"
   },
   "devDependencies": {
